--- a/environment.yml
+++ b/environment.yml
@@ -1,49 +1,6 @@
 name: dip
-channels:
-  - defaults
 dependencies:
-  - blas=1.0=mkl
-  - ca-certificates=2019.10.16=0
-  - certifi=2019.9.11=py36_0
-  - cycler=0.10.0=py36h009560c_0
-  - freetype=2.9.1=ha9979f8_1
-  - hdf5=1.8.20=hac2f561_1
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=58.2=ha66f8fd_1
-  - intel-openmp=2019.4=245
-  - jpeg=9b=hb83a4c4_2
-  - kiwisolver=1.1.0=py36ha925a31_0
-  - libopencv=3.4.2=h20b85fd_0
-  - libpng=1.6.37=h2a8f88b_0
-  - libtiff=4.1.0=h56a325e_0
-  - matplotlib=3.1.1=py36hc8f65d3_0
-  - mkl=2019.4=245
-  - mkl-service=2.3.0=py36hb782905_0
-  - mkl_fft=1.0.15=py36h14836fe_0
-  - mkl_random=1.1.0=py36h675688f_0
-  - numpy=1.17.3=py36h4ceb530_0
-  - numpy-base=1.17.3=py36hc3f5095_0
-  - opencv=3.4.2=py36h40b0b35_0
-  - openssl=1.1.1d=he774522_3
-  - pip=19.3.1=py36_0
-  - py-opencv=3.4.2=py36hc319ecb_0
-  - pyparsing=2.4.5=py_0
-  - pyqt=5.9.2=py36h6538335_2
-  - python=3.6.9=h5500b2f_0
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
-  - qt=5.9.7=vc14h73c81de_0
-  - setuptools=41.6.0=py36_0
-  - sip=4.19.8=py36h6538335_0
-  - six=1.13.0=py36_0
-  - sqlite=3.30.1=he774522_0
-  - tornado=6.0.3=py36he774522_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.16.27012=hf0eaf9b_0
-  - wheel=0.33.6=py36_0
-  - wincertstore=0.2=py36h7fe50ca_0
-  - xz=5.2.4=h2fa13f4_4
-  - zlib=1.2.11=h62dcd97_3
-  - zstd=1.3.7=h508b16e_0
-prefix: C:\Users\haldarritam\Anaconda3\envs\dip
-
+  - python=3.6.9
+  - matplotlib
+  - numpy
+  - opencv
